# rust-portfolio

./: .gitignore  README.md
cli-image-resizer/: Cargo.toml  README.md
cli-image-resizer/src/: main.rs
lib-math-utils/: Cargo.toml  README.md
lib-math-utils/src/: lib.rs
remove-duplicates/: Cargo.toml  Dockerfile  README.md
remove-duplicates/src/: main.rs
remove-duplicates/static/: index.html
remove-duplicates/templates/: result.html
wasm-todo/: Cargo.toml  README.md
wasm-todo/src/: main.rs
