[package]
name = "remove_duplicates"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6"
actix-multipart = "0.7"
actix-web-lab = "0.24.2"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
minijinja = { version = "2.11.0", features = ["loader"] }
